--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,3 +1,55 @@
+// Mixin
+@mixin button ($padding, $margin) {
+    position: relative;
+    z-index: 0;
+    text-decoration: none;
+    background: linear-gradient(0deg, $main-color -11%, $secondary-color 124%);
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
+    border-radius: 25px;
+    padding: $padding;
+    //margin: 15px;
+    margin: $margin;
+
+    .button-text {
+        position: relative;
+        z-index: 2;
+        color: white;
+        font-size: 16px;
+        font-weight: 500;
+    }
+
+    &::after {
+        content: "";
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        opacity: 0;
+        z-index: -1;
+        background: linear-gradient(0deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.15)), linear-gradient(0deg, $main-color -5.2%, $secondary-color 110.74%);
+        box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.35);
+        border-radius: 25px;
+        transition: opacity 500ms;
+    }
+
+    &:hover {
+        &::after {
+            opacity: 1;
+            z-index: 1;
+        }
+    }
+}
+
+
+
+// Imports
+@import "loader";
+@import "page-accueil";
+@import "page-restaurant";
+
+
+
 // Variables
 $main-color: #9356DC;
 $secondary-color: #FF79DA;
@@ -48,360 +100,6 @@ body {
     }
 }
 
-.menu-title { 
-    font-family: 'Shrikhand', sans-serif;
-    color: $main-title-color;
-    font-size: 30px;
-    font-weight: 400;
-}
-
-
-// Loader
-.loader-page {
-    position: fixed;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    background-color: $body-background-color;
-    //animation: loader 2.8s forwards;
-
-    opacity: 0;
-    z-index: -3;
-}
-
-@keyframes loader {
-    0%, 80% {
-        opacity: 1;
-        z-index: 5;
-    }
-    100% {
-        opacity: 0;
-        z-index: -3;
-    }
-}
-
-.loader-contener {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: auto;
-    width: 250px;
-    height: 250px;
-    z-index: 6;
-    background-color: $body-background-color;
-
-    border: 1px solid black;
-}
-
-.cutting-board {
-    position: absolute;
-    margin: auto;
-    width: 100px;
-    height: 6px;
-    z-index: 7;
-    background: linear-gradient(0deg, $main-color -11%, $secondary-color 124%);
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
-    border-radius: 25px;
-
-    opacity: 0;
-}
-
-.knife {
-    position: absolute;
-    top: 107px;
-    left: 100px;
-    z-index: 8;
-    display: flex;
-    flex-wrap: nowrap;
-    justify-content: center;
-    animation: knife-mvt 2s forwards;
-
-    opacity: 0;
-
-    .blade {
-        width: 50px;
-        height: 15px;
-        z-index: 8;
-        background: linear-gradient(0deg, $main-color -11%, $secondary-color 124%);
-        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
-        border-radius: 100% 0% 42% 58% / 0% 100% 0% 100%;
-    }
-
-    .handle {
-        width: 35px;
-        height: 8px;
-        z-index: 8;
-        background: linear-gradient(0deg, $main-color -11%, $secondary-color 124%);
-        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
-        border-radius: 0 25px 25px 0;
-    }
-}
-
-@keyframes knife-mvt {
-    0% {
-        transform: rotate(60deg) translateY(-50px);
-    }
-    12% {
-        transform: translateY(0) rotate(0);
-    }
-    30% {
-        transform: translateX(5px) rotate(60deg) translateY(-50px);
-    }
-    40% {
-        transform: translateX(5px) rotate(0) translateY(0);
-    }
-    54% {
-        transform: translateX(10px) rotate(60deg) translateY(-50px);
-    }
-    64% {
-        transform: translateX(10px) rotate(0) translateY(0);
-    }
-    74%, 100% {
-        transform: translateX(15px) rotate(60deg) translateY(-50px);
-    }
-}
-
-.carrot {
-    position: absolute;
-    top: 105px;
-    margin-left: auto;
-    margin-right: auto;
-    width: 60px;
-    height: 15px;
-    z-index: 7;
-    background: linear-gradient(0deg, $main-color -10%, $secondary-color 30%);
-    border-radius: 12% 88% 89% 11% / 54% 47% 53% 46%;
-    // animation: carrot-mvt 170ms 1700ms ease-in forwards;
-    opacity: 0;
-
-    .cut{
-        position: absolute;
-        width: 3px;
-        height: 16px;
-        z-index: 7;
-        background-color: $body-background-color;
-        opacity: 0;
-
-        &-1 {
-            left: 25%;
-            animation: carrot-cut-1 150ms 220ms  linear forwards;
-        }
-
-        &-2 {
-            left: 50%;
-            animation: carrot-cut-2 150ms 750ms  linear forwards;
-        }
-
-        &-3 {
-            left: 75%;
-            animation: carrot-cut-3 150ms 1220ms  linear forwards;
-        }
-    }
-}
-
-@keyframes carrot-mvt {
-    0% {
-        opacity: 1;
-    }
-    100% {
-        transform: translateX(100px);
-        opacity: 0;
-    }
-}
-
-@keyframes carrot-cut-1 {
-    0% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
-    }
-}
-
-@keyframes carrot-cut-2 {
-    0% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
-    }
-}
-
-@keyframes carrot-cut-3 {
-    0% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
-    }
-}
-
-.plate {
-    position: absolute;
-    margin: auto;
-    width: 100px;
-    height: 20px;
-    z-index: 6;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
-    border-radius: 50% 50% 50% 50% / 50% 50% 50% 50%;
-    border: 3px solid $main-color;
-}
-
-.meat-1 {
-    position: absolute;
-    top: 2px;
-    margin-left: 45px;
-    width: 40px;
-    height: 15px;
-    z-index: 6;
-    background: linear-gradient(90deg, $main-color -11%, $secondary-color 124%);
-    border-radius: 24% 76% 77% 23% / 45% 44% 56% 55%;
-}
-
-.meat-2 {
-    position: absolute;
-    top: 6px;
-    margin-left: 68px;
-    width: 10px;
-    height: 5px;
-    z-index: 6;
-    background-color: $body-background-color;
-    border-radius: 50% 50% 50% 50% / 50% 50% 50% 50%;
-}
-
-.vegetable {
-    position: absolute;
-    top: 2px;
-    margin-left: 17px;
-    width: 23px;
-    height: 13px;
-    z-index: 6;
-    background: linear-gradient(0deg, $main-color -10%, $secondary-color 30%);
-    border-radius: 50% 50% 50% 50% / 100% 100% 0% 0%;
-}
-
-.steam-1 {
-    position: absolute;
-    top: 5px;
-    margin-left: 10px;
-    z-index: 6;
-}
-
-.steam-2 {
-    position: absolute;
-    top: 0;
-    margin-left: 27px;
-    z-index: 6;
-}
-
-.steam-3 {
-    position: absolute;
-    top: 5px;
-    margin-left: 44px;
-    z-index: 6;
-}
-
-.steam-part-1 {
-    position: absolute;
-    top: -32px;
-    margin-left: 17px;
-    width: 12px;
-    height: 15px;
-    z-index: 6;
-    border-left: 3px solid $main-color;
-    border-radius: 50%;
-}
-
-.steam-part-2 {
-    position: absolute;
-    top: -46px;
-    margin-left: 13px;
-    width: 12px;
-    height: 15px;
-    z-index: 6;
-    border-right: 3px solid $main-color;
-    border-radius: 50%;
-}
-
-.steam-part-3 {
-    position: absolute;
-    top: -60px;
-    margin-left: 17px;
-    width: 12px;
-    height: 15px;
-    z-index: 6;
-    border-left: 3px solid $main-color;
-    border-radius: 50%;
-}
-
-.bell {
-    position: absolute;
-    top: 90px;
-    margin-left: auto;
-    width: 80px;
-    height: 40px;
-    z-index: 6;
-    background-color: white;
-    border: 3px solid $main-color;
-    border-radius: 48% 52% 47% 53% / 82% 80% 20% 18%;
-
-    opacity: 0;
-}
-
-.bell-wrist {
-    position: absolute;
-    top: -10px;
-    margin-left: 33px;
-    width: 8px;
-    height: 8px;
-    z-index: 6;
-    background-color: white;
-    border: 3px solid $main-color;
-    border-radius: 50%;
-
-    opacity: 0;
-}
-
-.loading-bar {
-    position: absolute;
-    top: 180px;
-    margin-left: auto;
-    margin-right: auto;
-    width: 200px;
-    height: 15px;
-    z-index: 6;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
-    border-radius: 25px;
-
-    .progress {
-        position: relative;
-        width: 0%;
-        height: 100%;
-        background: linear-gradient(90deg, $main-color -11%, $secondary-color 124%);
-        border-radius: 25px;
-        //animation: loading 1300ms cubic-bezier(.69,.02,.89,.7) forwards;
-    }
-}
-
-@keyframes loading {
-    0% {
-        width: 0%;
-    }
-    25%, 27% {
-        width: 20%;
-    }
-    60%, 62% {
-        width: 60%;
-    }
-    100% {
-        width: 100%;
-    }
-}
 
 
 // Header
@@ -410,6 +108,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    position: relative;
     background-color: white;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25);
     padding: 20px 0 10px 0;
@@ -433,353 +132,6 @@ body {
     }
 }
 
-
-// Section "location"
-.location {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 15px;
-    color: $dark-grey-color;
-    background-color: $location-background-color;
-    padding: 12px 0 16px 0;
-    font-size: 18px;
-
-    &__text {
-        font-size: 16px;
-        font-weight: 500;
-    }
-
-    // Desktop devices
-    @media (min-width: 769px) {
-        padding: 16px 0;
-    }
-}
-
-
-// Section "presentation"
-.presentation {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    row-gap: 12px;
-    padding: 40px 0;
-
-    &__text {
-        color: $dark-grey-color;
-        font-size: 18px;
-        font-weight: 300;
-        padding: 0 30px 3px 30px;
-    }
-
-    // Desktop devices
-    @media (min-width: 769px) {
-        padding: 30px 0 15px 0;
-    }
-}
-
-.presentation__button {
-    position: relative;
-    z-index: 0;
-    text-decoration: none;
-    background: linear-gradient(0deg, $main-color -11%, $secondary-color 124%);
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
-    border-radius: 25px;
-    padding: 15px 21px;
-    margin: 15px;
-
-    .button-text {
-        position: relative;
-        z-index: 2;
-        color: white;
-        font-size: 16px;
-        font-weight: 500;
-    }
-
-    &::after {
-        content: "";
-        position: absolute;
-        left: 0;
-        right: 0;
-        top: 0;
-        bottom: 0;
-        opacity: 0;
-        z-index: -1;
-        background: linear-gradient(0deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.15)), linear-gradient(0deg, $main-color -5.2%, $secondary-color 110.74%);
-        box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.35);
-        border-radius: 25px;
-        transition: opacity 500ms;
-    }
-
-    &:hover {
-        &::after {
-            opacity: 1;
-            z-index: 1;
-        }
-    }
-}
-
-
-// Section "functioning"
-.functioning {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    background-color: white;
-    padding-bottom: 65px;
-
-    &__margins {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        width: 100%;
-        max-width: 1024px;
-        margin-left: auto;
-        margin-right: auto;
-    }
-
-    &__contener {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        width: auto;
-        gap: 25px;
-        margin: 0 17px 0 30px;
-
-        // Desktop devices
-        @media (min-width: 769px) {
-            flex-direction: row;
-            flex-wrap: nowrap;
-            gap: 32px;
-        }
-    }
-    
-    &__step {
-        display: flex;
-        align-items: center;
-        position: relative;
-        width: 87%;
-        max-width: 282px;
-        background-color: $body-background-color;
-        box-shadow: 0 4px 15px rgba(0, 0, 0, 0.15);
-        border-radius: 20px;
-        font-size: 16px;
-        font-weight: 500;
-        padding: 20px;
-
-        // Desktop devices
-        @media (min-width: 769px) {
-            width: 30%;
-        }
-
-    }
-
-    // Desktop devices
-    @media (min-width: 769px) {
-        padding: 20px 0 50px 0;
-    }
-}
-
-.step-number {
-    position: absolute;
-    left: -12px;
-    width: 24px;
-    height: 24px;
-    background-color: $main-color;
-    color: white;
-    font-size: 14px;
-    font-weight: 500;
-    text-align: center;
-    line-height: 25px;
-    border-radius: 15px;
-}
-
-.step-icon {
-    width: 25px;
-    color: $main-icon-color;
-    padding : 15px;
-
-    &:hover{
-        color: $main-color;
-    }
-}
-
-
-// Section "restaurants"
-.restaurants {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    padding-bottom: 65px;
-
-    &__margins {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        width: 100%;
-        max-width: 1024px;
-        margin-left: auto;
-        margin-right: auto;
-    }
-
-    &__contener {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        width: auto;
-        gap: 17px;
-        padding: 0 17px;
-
-        // Desktop devices
-        @media (min-width: 769px) {
-            flex-direction: row;
-            flex-wrap: wrap;
-            justify-content: space-between;
-            column-gap: 0;
-            row-gap: 50px;
-        }
-    }
-
-    &__card {
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-        max-width: 472px;
-        border-radius: 15px;
-        background-color: white;
-
-        // Desktop devices
-        @media (min-width: 769px) {
-            width: 47.6%;
-        }
-    }
-
-    // Desktop devices
-    @media (min-width: 769px) {
-        padding-bottom: 30px;
-    }
-}
-
-.no-decoration {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    text-decoration: none;
-    color:black;
-}
-
-.card-img-contener {
-    display: flex;
-    position: relative;
-    overflow : hidden;
-    width: 100%;
-    height: 175px;
-    border-radius: 15px 15px 0 0;
-}
-
-.card-img {
-    position: absolute;
-    top: -56px;
-    left: -2px;
-    width: 100%;
-    height: 231px;
-    object-fit: cover;
-    border-radius: 15px 15px 0 0;
-}
-
-.new-label {
-    position: absolute;
-    z-index: 1;
-    top: 12px;
-    right: 12px;
-    width: 80px;
-    height: 29px;
-    font-size: 14px;
-    font-weight: 500;
-    text-align: center;
-    line-height: 29px;
-    color: $new-label-color;
-    background-color: $new-label-background-color;
-}
-
-.card-content {
-    display: flex;
-    width: 100%;
-    padding: 16px 12px;
-}
-
-.card-txt {
-    display: flex;
-    flex-direction: column;
-    width: 85%;
-    gap: 5px;
-}
-
-.card-title {
-    font-size: 18px;
-    font-weight: 700;
-}
-
-.card-subtitle {
-    font-size: 17px;
-    font-weight: 300;
-}
-
-.heart-contener {
-    position: relative;
-    width: 18%;
-
-    .check-heart {
-        position: absolute;
-        left: -9999px;
-    }
-
-    .empty-heart {
-        position: absolute;
-        left: 0;
-        right: 0;
-        top: 0;
-        bottom: 0;
-        z-index: 1;
-        opacity: 1;
-        padding-top: 18px;
-        cursor: pointer;
-    }
-
-    .colored-heart {
-        position: absolute;
-        left: 0;
-        right: 0;
-        top: 0;
-        bottom: 0;
-        z-index: -1;
-        opacity: 0;
-        padding-top: 18px;
-        cursor: pointer;
-        color: transparent;
-        background-image: linear-gradient(180deg, $main-color 10%, $secondary-color 70%);
-        background-clip: text;
-        transition: opacity 600ms;
-    }
-
-    .check-heart:checked + label .colored-heart {
-        z-index: 2;
-        opacity: 1;
-    }
-
-    .check-heart:checked + label .empty-heart {
-        z-index:-1;
-        opacity: 0;
-    }
-}
 
 
 // Footer
