--- a/sass/loader.scss
+++ b/sass/loader.scss
@@ -2,7 +2,6 @@
 $main-color: #9356DC;
 $secondary-color: #FF79DA;
 $tertiary-color: #99E2D0;
-
 $body-background-color: #F7F7F7;
 $main-title-color: #101010;
 $dark-grey-color: #353535;
@@ -22,14 +21,13 @@ $new-label-background-color: #99E2D0;
     width: 100%;
     height: 100%;
     background-color: $body-background-color;
-    //animation: loader 2.8s forwards;
-
-    opacity: 0;
-    z-index: -3;
+    opacity: 1;
+    z-index: 5;
+    animation: loader 300ms 2700ms forwards;
 }
 
 @keyframes loader {
-    0%, 80% {
+    0% {
         opacity: 1;
         z-index: 5;
     }
@@ -38,6 +36,7 @@ $new-label-background-color: #99E2D0;
         z-index: -3;
     }
 }
+
 
 .loader-contener {
     position: relative;
@@ -50,9 +49,8 @@ $new-label-background-color: #99E2D0;
     height: 250px;
     z-index: 6;
     background-color: $body-background-color;
-
-    border: 1px solid black;
 }
+
 
 .cutting-board {
     position: absolute;
@@ -63,9 +61,18 @@ $new-label-background-color: #99E2D0;
     background: linear-gradient(0deg, $main-color -11%, $secondary-color 124%);
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
     border-radius: 25px;
-
-    opacity: 0;
+    animation: cutting-board 150ms 1050ms forwards;
 }
+
+@keyframes cutting-board  {
+    0% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
+}
+
 
 .knife {
     position: absolute;
@@ -75,9 +82,7 @@ $new-label-background-color: #99E2D0;
     display: flex;
     flex-wrap: nowrap;
     justify-content: center;
-    animation: knife-mvt 2s forwards;
-
-    opacity: 0;
+    animation: knife-mvt 1000ms forwards;
 
     .blade {
         width: 50px;
@@ -120,7 +125,14 @@ $new-label-background-color: #99E2D0;
     74%, 100% {
         transform: translateX(15px) rotate(60deg) translateY(-50px);
     }
+    97% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
 }
+
 
 .carrot {
     position: absolute;
@@ -132,8 +144,7 @@ $new-label-background-color: #99E2D0;
     z-index: 7;
     background: linear-gradient(0deg, $main-color -10%, $secondary-color 30%);
     border-radius: 12% 88% 89% 11% / 54% 47% 53% 46%;
-    // animation: carrot-mvt 170ms 1700ms ease-in forwards;
-    opacity: 0;
+    animation: carrot-mvt 170ms 1000ms ease-in forwards;
 
     .cut{
         position: absolute;
@@ -145,17 +156,17 @@ $new-label-background-color: #99E2D0;
 
         &-1 {
             left: 25%;
-            animation: carrot-cut-1 150ms 220ms  linear forwards;
+            animation: carrot-cut-1 150ms 100ms  linear forwards;
         }
 
         &-2 {
             left: 50%;
-            animation: carrot-cut-2 150ms 750ms  linear forwards;
+            animation: carrot-cut-2 150ms 400ms  linear forwards;
         }
 
         &-3 {
             left: 75%;
-            animation: carrot-cut-3 150ms 1220ms  linear forwards;
+            animation: carrot-cut-3 150ms 600ms  linear forwards;
         }
     }
 }
@@ -197,6 +208,7 @@ $new-label-background-color: #99E2D0;
     }
 }
 
+
 .plate {
     position: absolute;
     margin: auto;
@@ -206,94 +218,122 @@ $new-label-background-color: #99E2D0;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
     border-radius: 50% 50% 50% 50% / 50% 50% 50% 50%;
     border: 3px solid $main-color;
+    opacity: 0;
+    animation: plate 150ms 1400ms forwards;
+
+    .meat-1 {
+        position: absolute;
+        top: 2px;
+        margin-left: 45px;
+        width: 40px;
+        height: 15px;
+        z-index: 6;
+        background: linear-gradient(90deg, $main-color -11%, $secondary-color 124%);
+        border-radius: 24% 76% 77% 23% / 45% 44% 56% 55%;
+    }
+    
+    .meat-2 {
+        position: absolute;
+        top: 6px;
+        margin-left: 68px;
+        width: 10px;
+        height: 5px;
+        z-index: 6;
+        background-color: $body-background-color;
+        border-radius: 50% 50% 50% 50% / 50% 50% 50% 50%;
+    }
+    
+    .vegetable {
+        position: absolute;
+        top: 2px;
+        margin-left: 17px;
+        width: 23px;
+        height: 13px;
+        z-index: 6;
+        background: linear-gradient(0deg, $main-color -10%, $secondary-color 30%);
+        border-radius: 50% 50% 50% 50% / 100% 100% 0% 0%;
+    }
 }
 
-.meat-1 {
-    position: absolute;
-    top: 2px;
-    margin-left: 45px;
-    width: 40px;
-    height: 15px;
-    z-index: 6;
-    background: linear-gradient(90deg, $main-color -11%, $secondary-color 124%);
-    border-radius: 24% 76% 77% 23% / 45% 44% 56% 55%;
+@keyframes plate {
+    0% {
+        opacity: 0;
+        transform: translateX(-100px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
 }
 
-.meat-2 {
-    position: absolute;
-    top: 6px;
-    margin-left: 68px;
-    width: 10px;
-    height: 5px;
-    z-index: 6;
-    background-color: $body-background-color;
-    border-radius: 50% 50% 50% 50% / 50% 50% 50% 50%;
+
+.steam {
+    animation: steam 200ms 2000ms forwards;
+
+    .steam-1 {
+        position: absolute;
+        top: 5px;
+        margin-left: 10px;
+        z-index: 6;
+    }
+    
+    .steam-2 {
+        position: absolute;
+        top: 0;
+        margin-left: 27px;
+        z-index: 6;
+    }
+    
+    .steam-3 {
+        position: absolute;
+        top: 5px;
+        margin-left: 44px;
+        z-index: 6;
+    }
+    
+    .steam-part-1 {
+        position: absolute;
+        top: -32px;
+        margin-left: 17px;
+        width: 12px;
+        height: 15px;
+        z-index: 6;
+        border-left: 3px solid $main-color;
+        border-radius: 50%;
+    }
+    
+    .steam-part-2 {
+        position: absolute;
+        top: -46px;
+        margin-left: 13px;
+        width: 12px;
+        height: 15px;
+        z-index: 6;
+        border-right: 3px solid $main-color;
+        border-radius: 50%;
+    }
+    
+    .steam-part-3 {
+        position: absolute;
+        top: -60px;
+        margin-left: 17px;
+        width: 12px;
+        height: 15px;
+        z-index: 6;
+        border-left: 3px solid $main-color;
+        border-radius: 50%;
+    }    
 }
 
-.vegetable {
-    position: absolute;
-    top: 2px;
-    margin-left: 17px;
-    width: 23px;
-    height: 13px;
-    z-index: 6;
-    background: linear-gradient(0deg, $main-color -10%, $secondary-color 30%);
-    border-radius: 50% 50% 50% 50% / 100% 100% 0% 0%;
+@keyframes steam {
+    0% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
 }
 
-.steam-1 {
-    position: absolute;
-    top: 5px;
-    margin-left: 10px;
-    z-index: 6;
-}
-
-.steam-2 {
-    position: absolute;
-    top: 0;
-    margin-left: 27px;
-    z-index: 6;
-}
-
-.steam-3 {
-    position: absolute;
-    top: 5px;
-    margin-left: 44px;
-    z-index: 6;
-}
-
-.steam-part-1 {
-    position: absolute;
-    top: -32px;
-    margin-left: 17px;
-    width: 12px;
-    height: 15px;
-    z-index: 6;
-    border-left: 3px solid $main-color;
-    border-radius: 50%;
-}
-
-.steam-part-2 {
-    position: absolute;
-    top: -46px;
-    margin-left: 13px;
-    width: 12px;
-    height: 15px;
-    z-index: 6;
-    border-right: 3px solid $main-color;
-    border-radius: 50%;
-}
-
-.steam-part-3 {
-    position: absolute;
-    top: -60px;
-    margin-left: 17px;
-    width: 12px;
-    height: 15px;
-    z-index: 6;
-    border-left: 3px solid $main-color;
-    border-radius: 50%;
-}
 
 .bell {
     position: absolute;
@@ -305,23 +345,33 @@ $new-label-background-color: #99E2D0;
     background-color: white;
     border: 3px solid $main-color;
     border-radius: 48% 52% 47% 53% / 82% 80% 20% 18%;
-
     opacity: 0;
+    animation: bell 300ms 2000ms forwards;
+
+    .bell-wrist {
+        position: absolute;
+        top: -10px;
+        margin-left: 33px;
+        width: 8px;
+        height: 8px;
+        z-index: 6;
+        background-color: white;
+        border: 3px solid $main-color;
+        border-radius: 50%;
+    }
 }
 
-.bell-wrist {
-    position: absolute;
-    top: -10px;
-    margin-left: 33px;
-    width: 8px;
-    height: 8px;
-    z-index: 6;
-    background-color: white;
-    border: 3px solid $main-color;
-    border-radius: 50%;
-
-    opacity: 0;
+@keyframes bell {
+    0% {
+        opacity: 1;
+        transform: rotate(-90deg) translate(50px, -50px);
+    }
+    100% {
+        opacity: 1;
+        transform: rotate(0);
+    }
 }
+
 
 .loading-bar {
     position: absolute;
@@ -340,7 +390,7 @@ $new-label-background-color: #99E2D0;
         height: 100%;
         background: linear-gradient(90deg, $main-color -11%, $secondary-color 124%);
         border-radius: 25px;
-        //animation: loading 1300ms cubic-bezier(.69,.02,.89,.7) forwards;
+        animation: loading 2500ms cubic-bezier(.69,.02,.89,.7) forwards;
     }
 }
 
@@ -348,13 +398,19 @@ $new-label-background-color: #99E2D0;
     0% {
         width: 0%;
     }
-    25%, 27% {
-        width: 20%;
+    10%, 15% {
+        width: 15%;
     }
-    60%, 62% {
-        width: 60%;
+    20%, 25% {
+        width: 35%;
     }
-    100% {
+    30%, 35% {
+        width: 70%;
+    }
+    60%, 80% {
+        width: 90%;
+    }
+    90%,100% {
         width: 100%;
     }
 }
